front page with more info about beer components

--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -5,9 +5,9 @@
     </div>
     <nav>
         <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Contact</li>
+            <li><a [routerLink]="['/home']">Home</a></li>
+            <li><a [routerLink]="['/home']">About</a></li>
+            <li><a [routerLink]="['/home']">Contacts</a></li>
         </ul>
     </nav>
 </header>
