--- a/src/app/Components/products-list/products-list.component.html
+++ b/src/app/Components/products-list/products-list.component.html
@@ -1,9 +1,11 @@
+<app-header></app-header>
 <app-hero></app-hero>
 <div class="main-container">
 
     <ng-container *ngFor="let item of itemsService.listOfProducts">
 
-        <app-product [item]='item'></app-product>
+        <app-product [item]='item'>
+        </app-product>
 
     </ng-container>
 </div>
