--- a/src/app/Components/header/header.component.scss
+++ b/src/app/Components/header/header.component.scss
@@ -7,6 +7,8 @@ header {
   top: 0;
   z-index: 1;
   background-color: #ffffffa8;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 
   img {
     height: 50px;
@@ -21,6 +23,10 @@ header {
     font-weight: 700;
     li {
       cursor: pointer;
+      a {
+        text-decoration: none;
+        color: #000;
+      }
     }
   }
 }
