--- a/src/app/Components/beer-page/beer-page.component.html
+++ b/src/app/Components/beer-page/beer-page.component.html
@@ -1,5 +1,6 @@
 <app-header>
 </app-header>
 
-<app-beer-description [beer]='beer'>
+<app-beer-description [beer]='beer'
+    (onAddFavorite)="pushFavorite()">
 </app-beer-description>
