--- a/src/app/Components/contact/contact.component.html
+++ b/src/app/Components/contact/contact.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-    <h1>ABOUT PAGE IS UNDER CONSTRUCTION</h1><br>
+    <h1>CONTACT PAGE IS UNDER CONSTRUCTION</h1>
+    <br>
     <a [routerLink]="['/']">go to front page</a>
 
 </div>
