--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -4,10 +4,10 @@
             alt="Beer Lovers Logo">
     </div>
     <nav>
-        <ul>
-            <li><a [routerLink]="['/home']">Home</a></li>
-            <li><a [routerLink]="['/home']">About</a></li>
-            <li><a [routerLink]="['/home']">Contacts</a></li>
-        </ul>
+        <div class="links">
+            <a [routerLink]="['/home']">Home</a>
+            <a [routerLink]="['/about']">About</a>
+            <a [routerLink]="['/contacts']">Contacts</a>
+        </div>
     </nav>
 </header>
