--- a/src/app/Components/hero/hero.component.html
+++ b/src/app/Components/hero/hero.component.html
@@ -1,13 +1,13 @@
 <div class="hero">
     <h1>WE LOVE BEER</h1>
     <form action="">
-        <label for="email">Enter Email to Subscribe:</label>
-        <input class="email"
-            type="email"
-            name="email"
-            id="subscription">
-        <input class="subscribe "
+        <label for="search">Search for beer brand:</label>
+        <input class="search-bar"
+            type="search"
+            name="search"
+            placeholder="Corona">
+        <input class="btn-search"
             type="submit"
-            value="Subscribe">
+            value="Get Beer">
     </form>
 </div>
