--- a/src/app/Components/header/header.component.scss
+++ b/src/app/Components/header/header.component.scss
@@ -14,19 +14,18 @@ header {
     height: 50px;
   }
 
-  ul {
+  .links {
     display: flex;
     gap: 25px;
     list-style-type: none;
     font-size: 18px;
     margin-right: 40px;
     font-weight: 700;
-    li {
+
+    a {
       cursor: pointer;
-      a {
-        text-decoration: none;
-        color: #000;
-      }
+      text-decoration: none;
+      color: #000;
     }
   }
 }
