add and remove items to favorite, render favList

--- a/src/app/Components/beer-page/beer-page.component.html
+++ b/src/app/Components/beer-page/beer-page.component.html
@@ -1,6 +1,9 @@
 <app-header>
 </app-header>
-
-<app-beer-description [beer]='beer'
-    (onAddFavorite)="pushFavorite()">
-</app-beer-description>
+<div class="main-container">
+    <app-beer-description [beer]='beer'
+        (onAddFavorite)="pushFavorite()">
+    </app-beer-description>
+    <app-favorits-list></app-favorits-list>
+    <!-- <button [routerLink]="['/favorites']">Go to favorite list</button> -->
+</div>
