--- a/src/app/Components/beer-page/beer-page.component.scss
+++ b/src/app/Components/beer-page/beer-page.component.scss
@@ -1,1 +1,8 @@
-
+.main-container {
+  display: flex;
+  gap: 20px;
+  justify-content: space-between;
+  app-favorites-list {
+    width: 100px;
+  }
+}
