--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -1,7 +1,8 @@
 <header>
     <div class="logo">
         <img src="../../../assets/Images/beerLogo.jpg"
-            alt="Beer Lovers Logo">
+            alt="Beer Lovers Logo"
+            [routerLink]="['/home']">
     </div>
     <nav>
         <div class="links">
