--- a/src/app/Components/products-list/products-list.component.html
+++ b/src/app/Components/products-list/products-list.component.html
@@ -9,3 +9,8 @@
 
     </ng-container>
 </div>
+<hr>
+<div class="btn-group">
+    <button (click)="nextPage()">Next</button>
+    <button (click)="nextPage()">Back</button>
+</div>
