--- a/src/app/Components/products-list/products-list.component.scss
+++ b/src/app/Components/products-list/products-list.component.scss
@@ -5,3 +5,14 @@
   margin-top: 20px;
   padding: 0 20px;
 }
+
+.btn-group {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin: 20px 0;
+
+  button {
+    padding: 10px 15px;
+  }
+}
