search beer by name

--- a/src/app/Components/products-list/products-list.component.html
+++ b/src/app/Components/products-list/products-list.component.html
@@ -1,7 +1,8 @@
 <app-header></app-header>
 <app-hero></app-hero>
 <div class="main-container">
-
+    <div *ngIf='itemsService.listOfProducts === []'>Beer Not Found
+    </div>
     <ng-container *ngFor="let item of itemsService.listOfProducts">
 
         <app-product [item]='item'>
