--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -6,7 +6,8 @@
     </div>
     <nav>
         <div class="links">
-            <a [routerLink]="['/home']">Home</a>
+            <a [routerLink]="['/home']"
+                (click)="getBeers()">Home</a>
             <a [routerLink]="['/about']">About</a>
             <a [routerLink]="['/contacts']">Contacts</a>
         </div>
