Subject for search component as message

--- a/src/app/Components/hero/hero.component.html
+++ b/src/app/Components/hero/hero.component.html
@@ -9,11 +9,13 @@
                 type="search"
                 name="searchText"
                 placeholder="Corona"
-                [(ngModel)]="searchString">
+                [(ngModel)]="searchString"
+                #search>
         </div>
 
         <button class="btn-search"
-            (click)="getSearchString()">Get
+            (click)="getSearchString(search.value)">Get
             Beer</button>
+        {{search.value}}
     </form>
 </div>
