moved to behavior subject to add more subscribers

--- a/src/app/Components/beer-description/beer-description.component.html
+++ b/src/app/Components/beer-description/beer-description.component.html
@@ -2,7 +2,8 @@
     <img src="{{beer.image_url}}"
         alt="Beer image">
     <div class="beer-info">
-        <h1>{{beer.name}}</h1>
+        {{searchString}}
+        <h1>{{beer.name}}++++++++{{searchString}}</h1>
         <p>Alcohol: <span>{{beer.abv}} %</span></p>
         <p>PH number: <span>{{beer.ph}}</span></p>
         <p class="desc">{{beer.description}}</p>
