--- a/src/app/Components/products-list/products-list.component.html
+++ b/src/app/Components/products-list/products-list.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <app-hero></app-hero>
 <div class="main-container">
-    {{message}}
+    {{searchString}}
     <div *ngIf='itemsService.listOfProducts === []'>Beer Not Found
     </div>
     <ng-container *ngFor="let item of itemsService.listOfProducts">
