--- a/src/app/Components/hero/hero.component.scss
+++ b/src/app/Components/hero/hero.component.scss
@@ -15,18 +15,25 @@
     align-items: center;
     gap: 15px;
     padding: 15px;
-    label {
-      font-size: 900;
-      text-decoration: solid;
-    }
-    .search-bar {
-      width: 30ch;
-      padding: 5px;
-      line-height: 28px;
-      border: none;
-      border-radius: 5px;
-      opacity: 0.6;
-      font-style: italic;
+    .input-group {
+      display: flex;
+      gap: 5px;
+      flex-direction: column;
+      justify-content: center;
+      label {
+        text-align: center;
+        font-size: 18px;
+        text-decoration: solid;
+      }
+      .search-bar {
+        width: 50ch;
+        padding: 5px;
+        line-height: 28px;
+        border: none;
+        border-radius: 5px;
+        opacity: 0.6;
+        font-style: italic;
+      }
     }
     .btn-search {
       border: none;
@@ -34,6 +41,7 @@
       width: 20ch;
       padding: 5px 15px;
       cursor: pointer;
+      font-size: 24px;
     }
     .btn-search:hover {
       color: #fff;
