moved from favorite to beerService

--- a/src/app/Components/beer-description/beer-description.component.html
+++ b/src/app/Components/beer-description/beer-description.component.html
@@ -2,8 +2,7 @@
     <img src="{{beer.image_url}}"
         alt="Beer image">
     <div class="beer-info">
-        {{searchString}}
-        <h1>{{beer.name}}++++++++{{searchString}}</h1>
+        <h1>{{beer.name}}</h1>
         <p>Alcohol: <span>{{beer.abv}} %</span></p>
         <p>PH number: <span>{{beer.ph}}</span></p>
         <p class="desc">{{beer.description}}</p>
